[gd_scene load_steps=8 format=2]

[ext_resource path="res://BadGuys/Generic/Hit_Hurt.wav" type="AudioStream" id=1]
[ext_resource path="res://BadGuys/Melee/Melee/Melee.gd" type="Script" id=2]
[ext_resource path="res://BadGuys/Generic/HurtDetection.gd" type="Script" id=3]
[ext_resource path="res://BadGuys/Melee/Melee/PreAttack.wav" type="AudioStream" id=4]
[ext_resource path="res://BadGuys/Generic/HealthBar.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("HitSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 1 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "Attack"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "warn"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("WarnAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackHitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:stopMove")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Melee" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtDetection" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtDetection"]

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )

[node name="WarnAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AttackSprite" type="Sprite" parent="."]
visible = false

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackHitbox"]

[node name="HealthBar" type="Polygon2D" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 1, 3 )
color = Color( 0.701961, 0.0980392, 0.0509804, 1 )
texture_scale = Vector2( 5, 1 )
polygon = PoolVector2Array( 0, -1, 1, -1, 1, 1, -1, 1, -1, -1 )
script = ExtResource( 5 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="area_entered" from="AttackHitbox" to="." method="_on_AttackHitbox_area_entered"]
